[gd_scene load_steps=8 format=3 uid="uid://ci2i2gvdbyciv"]

[ext_resource type="Script" uid="uid://condfdcskejiv" path="res://scripts/content_problem.gd" id="1_prbk5"]
[ext_resource type="PackedScene" uid="uid://bx20db8xc8vfv" path="res://components/wall_widget.tscn" id="2_onqak"]
[ext_resource type="FontFile" uid="uid://bbgpahlkmp2av" path="res://fonts/NotoEmoji-VariableFont_wght.ttf" id="4_lmpaw"]
[ext_resource type="Texture2D" uid="uid://b7wv0k6jh0awn" path="res://icons/sends-w.svg" id="5_e2lih"]
[ext_resource type="Theme" uid="uid://cc6pd6kgs8ds2" path="res://theme/main.tres" id="5_onqak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmpaw"]
bg_color = Color(0.0745098, 0.901961, 0.584314, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.295867, 0.295866, 0.295866, 0.6)
shadow_size = 10
shadow_offset = Vector2(2, 2)

[sub_resource type="LabelSettings" id="LabelSettings_gdjlf"]
font_size = 50
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.243137)
shadow_offset = Vector2(3, 3)

[node name="ContentProblem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_prbk5")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scroll" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginPrincipal" type="MarginContainer" parent="Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Lista" type="VBoxContainer" parent="Scroll/MarginPrincipal"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="MarginImage" type="MarginContainer" parent="Scroll/MarginPrincipal/Lista"]
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="WallWidget" parent="Scroll/MarginPrincipal/Lista/MarginImage" instance=ExtResource("2_onqak")]
z_index = 1
layout_mode = 2
mouse_force_pass_scroll_events = false

[node name="HBoxProblemInfo" type="VBoxContainer" parent="Scroll/MarginPrincipal/Lista"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="HBoxContainerNombre" type="HBoxContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Name" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainerNombre"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "La muerte"

[node name="MarginContainer" type="MarginContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainerNombre"]
layout_mode = 2
size_flags_horizontal = 10

[node name="CenterContainer" type="CenterContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainerNombre/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainerNombre/MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(200, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lmpaw")

[node name="Grade" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainerNombre/MarginContainer/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.0
offset_top = -25.5
offset_right = 41.0
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "7a+"
label_settings = SubResource("LabelSettings_gdjlf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="Description" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Bloque que flipas de duro"

[node name="Stars" type="HBoxContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo"]
layout_mode = 2

[node name="Star1" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_onqak")
theme_override_colors/font_color = Color(0.920025, 0.920025, 0.920025, 1)
theme_override_fonts/font = ExtResource("4_lmpaw")
text = "⭐"

[node name="Star2" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_onqak")
theme_override_colors/font_color = Color(0.920025, 0.920025, 0.920025, 1)
theme_override_fonts/font = ExtResource("4_lmpaw")
text = "⭐"

[node name="Star3" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_onqak")
theme_override_colors/font_color = Color(0.920025, 0.920025, 0.920025, 1)
theme_override_fonts/font = ExtResource("4_lmpaw")
text = "⭐"

[node name="Star4" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_onqak")
theme_override_colors/font_color = Color(0.920025, 0.920025, 0.920025, 1)
theme_override_fonts/font = ExtResource("4_lmpaw")
text = "⭐"

[node name="Star5" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars"]
layout_mode = 2
mouse_filter = 1
theme = ExtResource("5_onqak")
theme_override_colors/font_color = Color(0.920025, 0.920025, 0.920025, 1)
theme_override_fonts/font = ExtResource("4_lmpaw")
text = "⭐"

[node name="HBoxContainer" type="HBoxContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Sends" type="HBoxContainer" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 20
alignment = 1

[node name="Icon" type="TextureRect" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainer/Sends"]
layout_mode = 2
texture = ExtResource("5_e2lih")
expand_mode = 3

[node name="Number" type="Label" parent="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainer/Sends"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "3"
vertical_alignment = 1

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="scroll_started" from="Scroll" to="." method="_on_scroll_scroll_started"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo" to="." method="_on_h_box_problem_info_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars/Star1" to="." method="_on_star_1_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars/Star2" to="." method="_on_star_2_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars/Star3" to="." method="_on_star_3_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars/Star4" to="." method="_on_star_4_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/Stars/Star5" to="." method="_on_star_5_gui_input"]
[connection signal="gui_input" from="Scroll/MarginPrincipal/Lista/HBoxProblemInfo/HBoxContainer/Sends" to="." method="_on_sends_gui_input"]
